--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -16,6 +16,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{vanBallegooijen_1998ApJ...501..866V,
+       author = {{van Ballegooijen}, A.~A. and {Cartledge}, N.~P. and {Priest}, E.~R.},
+        title = "{Magnetic Flux Transport and the Formation of Filament Channels on the Sun}",
+      journal = {\apj},
+     keywords = {SUN: CORONA, SUN: FILAMENTS, SUN: MAGNETIC FIELDS, Sun: Corona, Sun: Filaments, Sun: Magnetic Fields},
+         year = 1998,
+        month = jul,
+       volume = {501},
+       number = {2},
+        pages = {866-881},
+          doi = {10.1086/305823},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...501..866V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 @ARTICLE{Dravskikh_2022ARep...66..490D,
@@ -33,6 +47,19 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{Dulk_2001pre5.conf..429D,
+       author = {{Dulk}, G.},
+        title = "{Solar Radio Emissions}",
+     keywords = {Solar radio emissions, Sun, review},
+    booktitle = {Planetary Radio Emissions V},
+         year = 2001,
+        month = jan,
+        pages = {429},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001pre5.conf..429D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    publisher = {The Austrian Academy of Sciences},
+      address = {Wien, Austria}
+}
 
 
 @ARTICLE{Panasenco_2020ApJS..246...54P,
@@ -51,3 +78,157 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Weber_1967ApJ...148..217W,
+       author = {{Weber}, Edmund J. and {Davis}, Leverett, Jr.},
+        title = "{The Angular Momentum of the Solar Wind}",
+      journal = {\apj},
+         year = 1967,
+        month = apr,
+       volume = {148},
+        pages = {217-227},
+          doi = {10.1086/149138},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1967ApJ...148..217W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Riley_2006ApJ...653.1510R,
+       author = {{Riley}, Pete and {Linker}, J.~A. and {Miki{\'c}}, Z. and {Lionello}, R. and {Ledvina}, S.~A. and {Luhmann}, J.~G.},
+        title = "{A Comparison between Global Solar Magnetohydrodynamic and Potential Field Source Surface Model Results}",
+      journal = {\apj},
+     keywords = {Sun: Solar Wind, Sun: Magnetic Fields},
+         year = 2006,
+        month = dec,
+       volume = {653},
+       number = {2},
+        pages = {1510-1516},
+          doi = {10.1086/508565},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJ...653.1510R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Harvey_2013SSRv..176...47H,
+       author = {{Harvey}, J.~W.},
+        title = "{The Sun in Time}",
+      journal = {\ssr},
+     keywords = {Sun, Activity, Magnetic fields, Coronal holes},
+         year = 2013,
+        month = jun,
+       volume = {176},
+       number = {1-4},
+        pages = {47-58},
+          doi = {10.1007/s11214-010-9726-z},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013SSRv..176...47H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Brun_2017LRSP...14....4B,
+       author = {{Brun}, Allan Sacha and {Browning}, Matthew K.},
+        title = "{Magnetism, dynamo action and the solar-stellar connection}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Stellar magnetism, Dynamo, Sun: magnetic fields, rotation, Stars: magnetism, rotation, wind, Convection, Magnetohydrodynamics (MHD), Methods: numerical},
+         year = 2017,
+        month = sep,
+       volume = {14},
+       number = {1},
+          eid = {4},
+        pages = {4},
+          doi = {10.1007/s41116-017-0007-8},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017LRSP...14....4B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gunar_2016ApJ...833..141G,
+       author = {{Gun{\'a}r}, Stanislav and {Heinzel}, Petr and {Mackay}, Duncan H. and {Anzer}, Ulrich},
+        title = "{Quiescent Prominences in the Era of ALMA: Simulated Observations Using the 3D Whole-prominence Fine Structure Model}",
+      journal = {\apj},
+     keywords = {methods: numerical, radiative transfer, Sun: filaments, prominences, Sun: radio radiation},
+         year = 2016,
+        month = dec,
+       volume = {833},
+       number = {2},
+          eid = {141},
+        pages = {141},
+          doi = {10.3847/1538-4357/833/2/141},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...833..141G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Brajsa_2018A&A...613A..17B,
+       author = {{Braj{\v{s}}a}, R. and {Sudar}, D. and {Benz}, A.~O. and {Skoki{\'c}}, I. and {B{\'a}rta}, M. and {De Pontieu}, B. and {Kim}, S. and {Kobelski}, A. and {Kuhar}, M. and {Shimojo}, M. and {Wedemeyer}, S. and {White}, S. and {Yagoubov}, P. and {Yan}, Y.},
+        title = "{First analysis of solar structures in 1.21 mm full-disc ALMA image of the Sun}",
+      journal = {\aap},
+     keywords = {Sun: radio radiation, Sun: chromosphere, Sun: transition region, Sun: corona, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = may,
+       volume = {613},
+          eid = {A17},
+        pages = {A17},
+          doi = {10.1051/0004-6361/201730656},
+archivePrefix = {arXiv},
+       eprint = {1711.06130},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018A&A...613A..17B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Rosner_1978ApJ...220..643R,
+       author = {{Rosner}, R. and {Tucker}, W.~H. and {Vaiana}, G.~S.},
+        title = "{Dynamics of the quiescent solar corona.}",
+      journal = {\apj},
+     keywords = {Solar Activity, Solar Corona, Solar X-Rays, X Ray Astronomy, Astronomical Models, Convective Flow, Hydrostatic Pressure, Parameterization, Plasma Control, Skylab Program, Stellar Magnetic Fields, Solar Physics, Solar Corona:Models, Solar Corona:X Rays},
+         year = 1978,
+        month = mar,
+       volume = {220},
+        pages = {643-645},
+          doi = {10.1086/155949},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1978ApJ...220..643R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Pneuman_1971SoPh...18..258P,
+       author = {{Pneuman}, G.~W. and {Kopp}, Roger A.},
+        title = "{Gas-Magnetic Field Interactions in the Solar Corona}",
+      journal = {\solphys},
+         year = 1971,
+        month = jun,
+       volume = {18},
+       number = {2},
+        pages = {258-270},
+          doi = {10.1007/BF00145940},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1971SoPh...18..258P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Vidotto_2021LRSP...18....3V,
+       author = {{Vidotto}, Aline A.},
+        title = "{The evolution of the solar wind}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Solar wind, Stellar winds and outflows, Stars: activity, magnetism, rotation, Stellar winds: observations and models, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Physics - Plasma Physics, Physics - Space Physics},
+         year = 2021,
+        month = dec,
+       volume = {18},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.1007/s41116-021-00029-w},
+archivePrefix = {arXiv},
+       eprint = {2103.15748},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021LRSP...18....3V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Altschuler_1969SoPh....9..131A,
+       author = {{Altschuler}, Martin D. and {Newkirk}, Gordon},
+        title = "{Magnetic Fields and the Structure of the Solar Corona. I: Methods of Calculating Coronal Fields}",
+      journal = {\solphys},
+         year = 1969,
+        month = sep,
+       volume = {9},
+       number = {1},
+        pages = {131-149},
+          doi = {10.1007/BF00145734},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1969SoPh....9..131A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
