--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -15,3 +15,23 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2008MNRAS.384...77M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Llama_2018ApJ...854....7L,
+       author = {{Llama}, Joe and {Jardine}, Moira M. and {Wood}, Kenneth and {Hallinan}, Gregg and {Morin}, Julien},
+        title = "{Simulating Radio Emission from Low-mass Stars}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: individual: V374 Peg, stars: low-mass, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = feb,
+       volume = {854},
+       number = {1},
+          eid = {7},
+        pages = {7},
+          doi = {10.3847/1538-4357/aaa59f},
+archivePrefix = {arXiv},
+       eprint = {1801.01507},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...854....7L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
