--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Johnstone_2015A&A...578A.129J,
+       author = {{Johnstone}, C.~P. and {G{\"u}del}, M.},
+        title = "{The coronal temperatures of low-mass main-sequence stars}",
+      journal = {\aap},
+     keywords = {Sun: corona, Sun: X-rays, gamma rays, stars: activity, stars: coronae, stars: low-mass, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = jun,
+       volume = {578},
+          eid = {A129},
+        pages = {A129},
+          doi = {10.1051/0004-6361/201425283},
+archivePrefix = {arXiv},
+       eprint = {1505.00643},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...578A.129J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Ness_2004A&A...427..667N,
        author = {{Ness}, J. -U. and {G{\"u}del}, M. and {Schmitt}, J.~H.~M.~M. and {Audard}, M. and {Telleschi}, A.},
         title = "{On the sizes of stellar X-ray coronae}",
