--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -35,3 +35,39 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Vida_2016A&A...590A..11V,
+       author = {{Vida}, K. and {Kriskovics}, L. and {Ol{\'a}h}, K. and {Leitzinger}, M. and {Odert}, P. and {K{\H{o}}v{\'a}ri}, Zs. and {Korhonen}, H. and {Greimel}, R. and {Robb}, R. and {Cs{\'a}k}, B. and {Kov{\'a}cs}, J.},
+        title = "{Investigating magnetic activity in very stable stellar magnetic fields. Long-term photometric and spectroscopic study of the fully convective M4 dwarf V374 Pegasi}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: flare, stars: individual: V374 Peg, stars: late-type, stars: low-mass, starspots, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = may,
+       volume = {590},
+          eid = {A11},
+        pages = {A11},
+          doi = {10.1051/0004-6361/201527925},
+archivePrefix = {arXiv},
+       eprint = {1603.00867},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...590A..11V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Hallinan_2009AIPC.1094..146H,
+       author = {{Hallinan}, Gregg and {Doyle}, Gerry and {Antonova}, Antoaneta and {Bourke}, Stephen and {Jardine}, Moira and {Donati}, J. -F. and {Morin}, Julien and {Golden}, Aaron},
+        title = "{Mapping the Radio Coronae of Cool Stars and Brown Dwarfs}",
+     keywords = {97.10.Ex, 97.20.Vs, 97.10.Ld, Stellar atmospheres, radiative transfer, opacity and line formation, Low luminosity stars subdwarfs and brown dwarfs, Magnetic and electric fields, polarization of starlight, corona, brown dwarfs, magnetic fields},
+    booktitle = {15th Cambridge Workshop on Cool Stars, Stellar Systems, and the Sun},
+         year = 2009,
+       editor = {{Stempels}, Eric},
+       series = {American Institute of Physics Conference Series},
+       volume = {1094},
+        month = feb,
+    publisher = {AIP},
+        pages = {146-151},
+          doi = {10.1063/1.3099085},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009AIPC.1094..146H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
