--- a/bibfiles/Reference.bib
+++ b/bibfiles/Reference.bib
@@ -1,3 +1,19 @@
+@ARTICLE{Hartmann_1985SoPh..100..587H,
+       author = {{Hartmann}, L.},
+        title = "{Mass Loss from Solar-Type Stars}",
+      journal = {\solphys},
+     keywords = {Main Sequence Stars, Solar Wind, Star Clusters, Stellar Mass Ejection, Stellar Winds, T Tauri Stars, Angular Momentum, Balmer Series, Early Stars, Line Spectra, Astrophysics, Mass Loss, Solar Wind, Mass Loss Rate, Main Sequence, Radiative Cool},
+         year = 1985,
+        month = oct,
+       volume = {100},
+        pages = {587},
+          doi = {10.1007/BF00158447},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1985SoPh..100..587H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @BOOK{Mihalas_1978stat.book.....M,
        author = {{Mihalas}, Dimitri},
         title = "{Stellar atmospheres}",
