--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -1,3 +1,22 @@
+@INPROCEEDINGS{Hallinan_2009AIPC.1094..146H,
+       author = {{Hallinan}, Gregg and {Doyle}, Gerry and {Antonova}, Antoaneta and {Bourke}, Stephen and {Jardine}, Moira and {Donati}, J. -F. and {Morin}, Julien and {Golden}, Aaron},
+        title = "{Mapping the Radio Coronae of Cool Stars and Brown Dwarfs}",
+     keywords = {97.10.Ex, 97.20.Vs, 97.10.Ld, Stellar atmospheres, radiative transfer, opacity and line formation, Low luminosity stars subdwarfs and brown dwarfs, Magnetic and electric fields, polarization of starlight, corona, brown dwarfs, magnetic fields},
+    booktitle = {15th Cambridge Workshop on Cool Stars, Stellar Systems, and the Sun},
+         year = 2009,
+       editor = {{Stempels}, Eric},
+       series = {American Institute of Physics Conference Series},
+       volume = {1094},
+        month = feb,
+    publisher = {AIP},
+        pages = {146-151},
+          doi = {10.1063/1.3099085},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009AIPC.1094..146H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Morin_2008MNRAS.384...77M,
        author = {{Morin}, J. and {Donati}, J. -F. and {Forveille}, T. and {Delfosse}, X. and {Dobler}, W. and {Petit}, P. and {Jardine}, M.~M. and {Collier Cameron}, A. and {Albert}, L. and {Manset}, N. and {Dintrans}, B. and {Chabrier}, G. and {Valenti}, J.~A.},
         title = "{The stable magnetic field of the fully convective star V374 Peg}",
