--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,22 @@
+
+
+@ARTICLE{Schatten_1969SoPh....6..442S,
+       author = {{Schatten}, Kenneth H. and {Wilcox}, John M. and {Ness}, Norman F.},
+        title = "{A model of interplanetary and coronal magnetic fields}",
+      journal = {\solphys},
+     keywords = {Magnetic Field, Interplanetary Magnetic Field, Function Solution, Field Pattern, Coronal Magnetic Field},
+         year = 1969,
+        month = mar,
+       volume = {6},
+       number = {3},
+        pages = {442-455},
+          doi = {10.1007/BF00146478},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1969SoPh....6..442S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Johnstone_2015A&A...578A.129J,
        author = {{Johnstone}, C.~P. and {G{\"u}del}, M.},
         title = "{The coronal temperatures of low-mass main-sequence stars}",
