--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Gudel_2007LRSP....4....3G,
+       author = {{G{\"u}del}, Manuel},
+        title = "{The Sun in Time: Activity and Environment}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Active stars, Climate, Cool stars, Corona, Circumstellar disks, Dynamo, Flares, High-energy radiation, Magnetic activity, Magnetic fields, Planetary atmospheres, Solar analogs, Solar evolution, Solar Analogs, Young Sun, Magnetic Activity, Telleschi, Circum Stellar Disks, Astrophysics},
+         year = 2007,
+        month = dec,
+       volume = {4},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.12942/lrsp-2007-3},
+archivePrefix = {arXiv},
+       eprint = {0712.1763},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007LRSP....4....3G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{OFionnagain_2018MNRAS.476.2465O,
        author = {{{\'O} Fionnag{\'a}in}, D. and {Vidotto}, A.~A.},
         title = "{The solar wind in time: a change in the behaviour of older winds?}",
