--- a/bibfiles/StellarAtmospheres.bib
+++ b/bibfiles/StellarAtmospheres.bib
@@ -1,3 +1,21 @@
+@ARTICLE{Hall_2008LRSP....5....2H,
+       author = {{Hall}, Jeffrey C.},
+        title = "{Stellar Chromospheric Activity}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Sun, Stars: chromospheres, Total Solar Irradiance, Maunder Minimum, Chromospheric Activity, National Solar Observatory, Mount Wilson Observatory},
+         year = 2008,
+        month = dec,
+       volume = {5},
+       number = {1},
+          eid = {2},
+        pages = {2},
+          doi = {10.12942/lrsp-2008-2},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008LRSP....5....2H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Donati_2006Sci...311..633D,
        author = {{Donati}, Jean-Fran{\c{c}}ois and {Forveille}, Thierry and {Collier Cameron}, Andrew and {Barnes}, John R. and {Delfosse}, Xavier and {Jardine}, Moira M. and {Valenti}, Jeff A.},
         title = "{The Large-Scale Axisymmetric Magnetic Topology of a Very-Low-Mass Fully Convective Star}",
