--- a/bibfiles/StellarAtmospheres.bib
+++ b/bibfiles/StellarAtmospheres.bib
@@ -1,3 +1,60 @@
+@ARTICLE{Veronig_2021NatAs...5..697V,
+       author = {{Veronig}, Astrid M. and {Odert}, Petra and {Leitzinger}, Martin and {Dissauer}, Karin and {Fleck}, Nikolaus C. and {Hudson}, Hugh S.},
+        title = "{Indications of stellar coronal mass ejections through coronal dimmings}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {5},
+        pages = {697-706},
+          doi = {10.1038/s41550-021-01345-9},
+archivePrefix = {arXiv},
+       eprint = {2110.12029},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021NatAs...5..697V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Koller_2021A&A...646A..34K,
+       author = {{Koller}, Florian and {Leitzinger}, Martin and {Temmer}, Manuela and {Odert}, Petra and {Beck}, Paul G. and {Veronig}, Astrid},
+        title = "{Search for flares and associated CMEs on late-type main-sequence stars in optical SDSS spectra}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: flare, stars: late-type, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = feb,
+       volume = {646},
+          eid = {A34},
+        pages = {A34},
+          doi = {10.1051/0004-6361/202039003},
+archivePrefix = {arXiv},
+       eprint = {2012.00786},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...646A..34K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Wood_2004LRSP....1....2W,
+       author = {{Wood}, Brian E.},
+        title = "{Astrospheres and Solar-like Stellar Winds}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Solar Wind, Mass Loss Rate, Stellar Wind, Hubble Space Telescope, Termination Shock},
+         year = 2004,
+        month = dec,
+       volume = {1},
+       number = {1},
+          eid = {2},
+        pages = {2},
+          doi = {10.12942/lrsp-2004-2},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004LRSP....1....2W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Hall_2008LRSP....5....2H,
        author = {{Hall}, Jeffrey C.},
         title = "{Stellar Chromospheric Activity}",
