--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,18 @@
+@ARTICLE{Parker_1958ApJ...128..677P,
+       author = {{Parker}, E.~N.},
+        title = "{Suprathermal Particle Generation in the Solar Corona.}",
+      journal = {\apj},
+         year = 1958,
+        month = nov,
+       volume = {128},
+        pages = {677},
+          doi = {10.1086/146580},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1958ApJ...128..677P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Gudel_2007LRSP....4....3G,
        author = {{G{\"u}del}, Manuel},
         title = "{The Sun in Time: Activity and Environment}",
