--- a/bibfiles/StarsAndPlanets.bib
+++ b/bibfiles/StarsAndPlanets.bib
@@ -1,3 +1,101 @@
+@ARTICLE{Vedantham_2020NatAs...4..577V,
+       author = {{Vedantham}, H.~K. and {Callingham}, J.~R. and {Shimwell}, T.~W. and {Tasse}, C. and {Pope}, B.~J.~S. and {Bedell}, M. and {Snellen}, I. and {Best}, P. and {Hardcastle}, M.~J. and {Haverkorn}, M. and {Mechev}, A. and {O'Sullivan}, S.~P. and {R{\"o}ttgering}, H.~J.~A. and {White}, G.~J.},
+        title = "{Coherent radio emission from a quiescent red dwarf indicative of star-planet interaction}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = feb,
+       volume = {4},
+        pages = {577-583},
+          doi = {10.1038/s41550-020-1011-9},
+archivePrefix = {arXiv},
+       eprint = {2002.08727},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020NatAs...4..577V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Turner_2021A&A...645A..59T,
+       author = {{Turner}, Jake D. and {Zarka}, Philippe and {Grie{\ss}meier}, Jean-Mathias and {Lazio}, Joseph and {Cecconi}, Baptiste and {Emilio Enriquez}, J. and {Girard}, Julien N. and {Jayawardhana}, Ray and {Lamy}, Laurent and {Nichols}, Jonathan D. and {de Pater}, Imke},
+        title = "{The search for radio emission from the exoplanetary systems 55 Cancri, {\ensuremath{\upsilon}} Andromedae, and {\ensuremath{\tau}} Bo{\"o}tis using LOFAR beam-formed observations}",
+      journal = {\aap},
+     keywords = {planets and satellites: magnetic fields, radio continuum: planetary systems, magnetic fields, planet-star interactions, planets and satellites: aurorae, planets and satellites: gaseous planets, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {645},
+          eid = {A59},
+        pages = {A59},
+          doi = {10.1051/0004-6361/201937201},
+archivePrefix = {arXiv},
+       eprint = {2012.07926},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...645A..59T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Kavanagh_2019MNRAS.485.4529K,
+       author = {{Kavanagh}, R.~D. and {Vidotto}, A.~A. and {{\'O}. Fionnag{\'a}in}, D. and {Bourrier}, V. and {Fares}, R. and {Jardine}, M. and {Helling}, Ch and {Moutou}, C. and {Llama}, J. and {Wheatley}, P.~J.},
+        title = "{MOVES - II. Tuning in to the radio environment of HD189733b}",
+      journal = {\mnras},
+     keywords = {MHD, stars: individual (HD189733), stars: low-mass, stars: planetary systems, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = jun,
+       volume = {485},
+       number = {4},
+        pages = {4529-4538},
+          doi = {10.1093/mnras/stz655},
+archivePrefix = {arXiv},
+       eprint = {1903.01809},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.485.4529K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Vidotto_2017A&A...602A..39V,
+       author = {{Vidotto}, A.~A. and {Donati}, J. -F.},
+        title = "{Predicting radio emission from the newborn hot Jupiter V830 Tauri b and its host star}",
+      journal = {\aap},
+     keywords = {stars: low-mass, stars: winds, outflows, planet-star interactions, planets and satellites: magnetic fields, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2017,
+        month = jun,
+       volume = {602},
+          eid = {A39},
+        pages = {A39},
+          doi = {10.1051/0004-6361/201629700},
+archivePrefix = {arXiv},
+       eprint = {1703.03622},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017A&A...602A..39V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Vidotto_2015MNRAS.449.4117V,
+       author = {{Vidotto}, A.~A. and {Fares}, R. and {Jardine}, M. and {Moutou}, C. and {Donati}, J. -F.},
+        title = "{On the environment surrounding close-in exoplanets}",
+      journal = {\mnras},
+     keywords = {MHD, methods: numerical, stars: magnetic field, planetary systems, stars: winds, outflows, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = jun,
+       volume = {449},
+       number = {4},
+        pages = {4117-4130},
+          doi = {10.1093/mnras/stv618},
+archivePrefix = {arXiv},
+       eprint = {1503.05711},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.449.4117V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Poppenhaeger_2014A&A...565L...1P,
        author = {{Poppenhaeger}, K. and {Wolk}, S.~J.},
         title = "{Indications for an influence of hot Jupiters on the rotation and activity of their host stars}",
