--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,14 @@
+@phdthesis{rose_thesis,
+  title        = {Prominences: The Phantom Menace},
+  author       = {Rosie Waugh},
+  year         = 2023,
+  month        = {May},
+  address      = {St Andrews, UK},
+  note         = {Available at \url{https://doi.org/10.17630/sta/605}},
+  school       = {University of St Andrews},
+  type         = {PhD thesis}
+}
+
 @ARTICLE{Ferreira_2000MNRAS.316..647F,
        author = {{Ferreira}, J.~M.},
         title = "{A model of slingshot prominences in rapidly rotating stars}",
