--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,18 @@
+@ARTICLE{Hale_1908ApJ....28..315H,
+       author = {{Hale}, George E.},
+        title = "{On the Probable Existence of a Magnetic Field in Sun-Spots}",
+      journal = {\apj},
+         year = 1908,
+        month = nov,
+       volume = {28},
+        pages = {315},
+          doi = {10.1086/141602},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1908ApJ....28..315H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Parker_1958ApJ...128..677P,
        author = {{Parker}, E.~N.},
         title = "{Suprathermal Particle Generation in the Solar Corona.}",
