--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,105 @@
+@ARTICLE{Climent_2020A&A...635A.160C,
+       author = {{Climent}, J.~B. and {Wittkowski}, M. and {Chiavassa}, A. and {Baron}, F. and {Marcaide}, J.~M. and {Guirado}, J.~C. and {Freytag}, B. and {H{\"o}fner}, S. and {Haubois}, X. and {Woillez}, J.},
+        title = "{VLTI-PIONIER imaging of the red supergiant V602 Carinae}",
+      journal = {\aap},
+     keywords = {techniques: image processing, stars: atmospheres, stars: imaging, stars: late-type, stars: massive, stars: individual: V602 Car, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = mar,
+       volume = {635},
+          eid = {A160},
+        pages = {A160},
+          doi = {10.1051/0004-6361/201936734},
+archivePrefix = {arXiv},
+       eprint = {2002.09243},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...635A.160C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Roettenbacher_2016Natur.533..217R,
+       author = {{Roettenbacher}, R.~M. and {Monnier}, J.~D. and {Korhonen}, H. and {Aarnio}, A.~N. and {Baron}, F. and {Che}, X. and {Harmon}, R.~O. and {K{\H{o}}v{\'a}ri}, Zs. and {Kraus}, S. and {Schaefer}, G.~H. and {Torres}, G. and {Zhao}, M. and {Ten Brummelaar}, T.~A. and {Sturmann}, J. and {Sturmann}, L.},
+        title = "{No Sun-like dynamo on the active star {\ensuremath{\zeta}} Andromedae from starspot asymmetry}",
+      journal = {\nat},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = may,
+       volume = {533},
+       number = {7602},
+        pages = {217-220},
+          doi = {10.1038/nature17444},
+archivePrefix = {arXiv},
+       eprint = {1709.10107},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016Natur.533..217R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Reinhold_2013A&A...560A...4R,
+       author = {{Reinhold}, Timo and {Reiners}, Ansgar and {Basri}, Gibor},
+        title = "{Rotation and differential rotation of active Kepler stars}",
+      journal = {\aap},
+     keywords = {stars: activity, stars: rotation, starspots, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = dec,
+       volume = {560},
+          eid = {A4},
+        pages = {A4},
+          doi = {10.1051/0004-6361/201321970},
+archivePrefix = {arXiv},
+       eprint = {1308.1508},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...560A...4R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Davenport_2015ApJ...806..212D,
+       author = {{Davenport}, James R.~A. and {Hebb}, Leslie and {Hawley}, Suzanne L.},
+        title = "{Detecting Differential Rotation and Starspot Evolution on the M Dwarf GJ 1243 with Kepler}",
+      journal = {\apj},
+     keywords = {starspots, stars: activity, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = jun,
+       volume = {806},
+       number = {2},
+          eid = {212},
+        pages = {212},
+          doi = {10.1088/0004-637X/806/2/212},
+archivePrefix = {arXiv},
+       eprint = {1505.01524},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...806..212D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{McQuillan_2014ApJS..211...24M,
+       author = {{McQuillan}, A. and {Mazeh}, T. and {Aigrain}, S.},
+        title = "{Rotation Periods of 34,030 Kepler Main-sequence Stars: The Full Autocorrelation Sample}",
+      journal = {\apjs},
+     keywords = {catalogs, methods: data analysis, methods: observational, stars: activity, stars: low-mass, stars: rotation, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = apr,
+       volume = {211},
+       number = {2},
+          eid = {24},
+        pages = {24},
+          doi = {10.1088/0067-0049/211/2/24},
+archivePrefix = {arXiv},
+       eprint = {1402.5694},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014ApJS..211...24M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Morin_2008MNRAS.390..567M,
        author = {{Morin}, J. and {Donati}, J. -F. and {Petit}, P. and {Delfosse}, X. and {Forveille}, T. and {Albert}, L. and {Auri{\`e}re}, M. and {Cabanac}, R. and {Dintrans}, B. and {Fares}, R. and {Gastine}, T. and {Jardine}, M.~M. and {Ligni{\`e}res}, F. and {Paletou}, F. and {Ramirez Velez}, J.~C. and {Th{\'e}ado}, S.},
         title = "{Large-scale magnetic topologies of mid M dwarfs}",
