--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,19 @@
+@INPROCEEDINGS{Haubois_2024IAUS..365...24H,
+       author = {{Haubois}, X.},
+        title = "{Imaging stellar surface features with optical interferometry}",
+     keywords = {Convection, techniques: interferometric, stars: fundamental parameters},
+    booktitle = {IAU Symposium},
+         year = 2024,
+       editor = {{Getling}, Alexander V. and {Kitchatinov}, Leonid L.},
+       series = {IAU Symposium},
+       volume = {365},
+        month = dec,
+        pages = {24-26},
+          doi = {10.1017/S174392132300529X},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024IAUS..365...24H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Schatten_1969SoPh....6..442S,
