--- a/bibfiles/StellarAtmospheres.bib
+++ b/bibfiles/StellarAtmospheres.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Isik_2023SSRv..219...70I,
+       author = {{I{\c{s}}{\i}k}, Emre and {van Saders}, Jennifer L. and {Reiners}, Ansgar and {Metcalfe}, Travis S.},
+        title = "{Scaling and Evolution of Stellar Magnetic Activity}",
+      journal = {\ssr},
+     keywords = {Cool stars, Stellar magnetism, Stellar activity, Angular momentum loss, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = dec,
+       volume = {219},
+       number = {8},
+          eid = {70},
+        pages = {70},
+          doi = {10.1007/s11214-023-01016-3},
+archivePrefix = {arXiv},
+       eprint = {2310.09515},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023SSRv..219...70I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Veronig_2021NatAs...5..697V,
        author = {{Veronig}, Astrid M. and {Odert}, Petra and {Leitzinger}, Martin and {Dissauer}, Karin and {Fleck}, Nikolaus C. and {Hudson}, Hugh S.},
         title = "{Indications of stellar coronal mass ejections through coronal dimmings}",
