--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,54 @@
+@INPROCEEDINGS{CollierCameron_2003EAS.....9..217C,
+       author = {{Collier Cameron}, A. and {Jardine}, M. and {Wood}, K. and {Donati}, J. -F.},
+        title = "{Stellar prominences and coronal magnetic fields}",
+    booktitle = {EAS Publications Series},
+         year = 2003,
+       editor = {{Arnaud}, J. and {Meunier}, N.},
+       series = {EAS Publications Series},
+       volume = {9},
+        month = jan,
+        pages = {217},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003EAS.....9..217C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Schroeder_1983A&A...124L..16S,
+       author = {{Schroeder}, K. -P.},
+        title = "{Detection of a stellar prominence of the K supergiant 32 Cyg.}",
+      journal = {\aap},
+     keywords = {K Stars, Prominences, Stellar Mass Ejection, Supergiant Stars, Chromosphere, Density (Mass/Volume), Iue, Light Curve, Opacity, Rayleigh Scattering, Astrophysics},
+         year = 1983,
+        month = aug,
+       volume = {124},
+        pages = {L16-L18},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983A&A...124L..16S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Cang_2021A&A...654A..42C,
+       author = {{Cang}, T. -Q. and {Petit}, P. and {Donati}, J. -F. and {Folsom}, C.~P.},
+        title = "{Short-term variations of surface magnetism and prominences of the young Sun-like star V530 Per}",
+      journal = {\aap},
+     keywords = {stars: magnetic field, stars: solar-type, stars: rotation, starspots, stars: individual: V530 Per, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = oct,
+       volume = {654},
+          eid = {A42},
+        pages = {A42},
+          doi = {10.1051/0004-6361/202141975},
+archivePrefix = {arXiv},
+       eprint = {2109.08690},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...654A..42C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @phdthesis{rose_thesis,
   title        = {Prominences: The Phantom Menace},
   author       = {Rosie Waugh},
