--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,60 @@
+@ARTICLE{vanBallegooijen_2000ApJ...539..983V,
+       author = {{van Ballegooijen}, A.~A. and {Priest}, E.~R. and {Mackay}, D.~H.},
+        title = "{Mean Field Model for the Formation of Filament Channels on the Sun}",
+      journal = {\apj},
+     keywords = {Magnetohydrodynamics: MHD, Sun: Corona, Sun: Magnetic Fields},
+         year = 2000,
+        month = aug,
+       volume = {539},
+       number = {2},
+        pages = {983-994},
+          doi = {10.1086/309265},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000ApJ...539..983V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Kochukhov_2016A&A...586A..30K,
+       author = {{Kochukhov}, O. and {Wade}, G.~A.},
+        title = "{Magnetic field topology of {\ensuremath{\tau}} Scorpii. The uniqueness problem of Stokes V ZDI inversions}",
+      journal = {\aap},
+     keywords = {stars: atmospheres, stars: early-type, stars: magnetic field, stars: individual:{\ensuremath{\tau}}Scorpii, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = feb,
+       volume = {586},
+          eid = {A30},
+        pages = {A30},
+          doi = {10.1051/0004-6361/201527454},
+archivePrefix = {arXiv},
+       eprint = {1511.07881},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...586A..30K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Carroll_2008A&A...488..781C,
+       author = {{Carroll}, T.~A. and {Kopf}, M. and {Strassmeier}, K.~G.},
+        title = "{A fast method for Stokes profile synthesis. Radiative transfer modeling for ZDI and Stokes profile inversion}",
+      journal = {\aap},
+     keywords = {line: formation, line: profiles, polarization, radiative transfer, stars: magnetic fields, Sun: magnetic fields, Astrophysics},
+         year = 2008,
+        month = sep,
+       volume = {488},
+       number = {2},
+        pages = {781-793},
+          doi = {10.1051/0004-6361:200809981},
+archivePrefix = {arXiv},
+       eprint = {0807.3850},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008A&A...488..781C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @INPROCEEDINGS{Haubois_2024IAUS..365...24H,
        author = {{Haubois}, X.},
         title = "{Imaging stellar surface features with optical interferometry}",
