--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -47,6 +47,16 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@phdthesis{sarah_thesis,
+  title        = {SARAH PHD TITLE},
+  author       = {Sarah Faller},
+  year         = 2025,
+  month        = {},
+  address      = {St Andrews, UK},
+  note         = {Available at \url{tbd}},
+  school       = {University of St Andrews},
+  type         = {PhD thesis}
+}
 
 
 @phdthesis{rose_thesis,
