--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -48,7 +48,7 @@ archivePrefix = {arXiv},
 }
 
 @phdthesis{sarah_thesis,
-  title        = {SARAH PHD TITLE},
+  title        = {The Role of Magnetic Cycles in the Formation of Slingshot Prominences},
   author       = {Sarah Faller},
   year         = 2025,
   month        = {},
