--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Montes_2001MNRAS.328...45M,
+       author = {{Montes}, D. and {L{\'o}pez-Santiago}, J. and {G{\'a}lvez}, M.~C. and {Fern{\'a}ndez-Figueroa}, M.~J. and {De Castro}, E. and {Cornide}, M.},
+        title = "{Late-type members of young stellar kinematic groups - I. Single stars}",
+      journal = {\mnras},
+     keywords = {CATALOGUES, STARS: ACTIVITY, STARS: CHROMOSPHERES, STARS: KINEMATICS, STARS: LATE-TYPE, OPEN CLUSTERS AND ASSOCIATIONS: GENERAL, Astrophysics},
+         year = 2001,
+        month = nov,
+       volume = {328},
+       number = {1},
+        pages = {45-63},
+          doi = {10.1046/j.1365-8711.2001.04781.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0106537},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001MNRAS.328...45M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Climent_2020A&A...635A.160C,
        author = {{Climent}, J.~B. and {Wittkowski}, M. and {Chiavassa}, A. and {Baron}, F. and {Marcaide}, J.~M. and {Guirado}, J.~C. and {Freytag}, B. and {H{\"o}fner}, S. and {Haubois}, X. and {Woillez}, J.},
         title = "{VLTI-PIONIER imaging of the red supergiant V602 Carinae}",
